# FoodFinders

IdeaProjects/PLC_Project/: build.gradle.kts
IdeaProjects/PLC_Project/gradle/wrapper/: gradle-wrapper.properties
IdeaProjects/PLC_Project/src/main/java/plc/homework/: Regex.java
IdeaProjects/PLC_Project/src/main/java/plc/project/: Lexer.java  Parser.java
IdeaProjects/PLC_Project/src/test/java/plc/homework/: RegexTests.java
IdeaProjects/PLC_Project/src/test/java/plc/project/: LexerTests.java  ParserExpressionTests.java
Project3/: CMakeLists.txt  MainMenu.cpp  MainMenu.h  main.cpp  mainSFML.cpp  restaurant.cpp  restaurant.h
